--- a/app/assets/stylesheets/proposals.scss
+++ b/app/assets/stylesheets/proposals.scss
@@ -10,18 +10,18 @@ body {
 
 .fixed {
 	position: fixed;
-	z-index: 2;
 }
 
-#proposal_index {
-	height: 100vh;
+.no-margin {
+	min-height: 100vh;
 	width: 100%;
+	margin: 0;
 }
 
 #proposal_holder {
-	height: 100vh;
-	background-color: #C9C9C9;
-
+	min-height: 100vh;
+	background-image: image-url('BLUR-1.jpg');
+	padding-bottom: 5vh;
 }
 
 .proposal {
@@ -33,16 +33,14 @@ body {
 	float: left;
 	margin-left: 2.5%;
 	margin-right: 2.5%;
-	-webkit-box-shadow: 0px 1px 4px 3px rgba(68,68,68,1);
-	-moz-box-shadow: 0px 1px 4px 3px rgba(68,68,68,1);
-	box-shadow: 0px 1px 4px 3px rgba(68,68,68,1);
 	background-image: image-url('background.png');
+	border-radius: 5px;
 }
 
 @media (max-width: 768px) {
 
 	.proposal {
-		width: 90%;
+		width: 100%;
 		margin-left: auto;
 		margin-right: auto;
 		float: none;
@@ -92,8 +90,9 @@ body {
 // Side Bar //
 
 #sidebar {
-	height: 100%;
+	min-height: 100vh;
 	background-image: image-url('background.png');
+	padding: 0;
 }
 
 @media (max-width: 991px) {
@@ -170,8 +169,9 @@ body {
 }
 
 #proposal_form {
-	min-height: 100vh;
+	min-height: 100%;
 	background-color: #C9C9C9;
+	padding-right: auto;
 
 }
 
@@ -184,6 +184,8 @@ body {
 	margin-top: 0;
 	margin-left: 0;
 	margin-right: 0;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 	color: white;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
@@ -196,15 +198,11 @@ body {
 		height: 7vh;
 		font-size: 2em;
 		border-bottom-right-radius: 5px;
-		background-image: none;
-		background-color: #F8F8F8;
+		border-bottom-left-radius: 5px;
 		border: 1px solid #E7E7E7;
-		color: #777;
+		color: #D9D9D9;
 	}
 
-	.form-block {
-		margin-top: 5vh;
-	}
 }
 .form-block {
 	border-radius: 10px;
@@ -215,6 +213,15 @@ body {
 	margin-bottom: 3vh;
 	background-image: image-url('background.png');
 
+}
+
+@media (max-width: 991px) {
+	.form-block {
+		margin-left: 2vh;
+		margin-right: 2vh;
+		min-height: 20vh;
+		padding-bottom: 5vh;
+	}
 }
 
 .event-fields {
@@ -269,7 +276,7 @@ body {
 
 #timeslot_form {
 	border-radius: 10px;
-	margin-bottom: 30vh;
+	margin-bottom: 15vh;
 	margin-top: 3vh;
 	margin-left: auto;
 	margin-right: auto;
@@ -308,7 +315,7 @@ body {
 	margin: 0;
 	margin-left: auto;
 	margin-right: auto;
-	color: black;
+	color: #777;
 	margin-bottom: -1vh;
 }
 
@@ -317,8 +324,16 @@ body {
 	color: black;
 }
 
+.attendee-form {
+	margin-top: 1.5vh;
+}
+
 .add-button {
-	margin-top: 5vh;
+	margin-top: 9vh;
+}
+
+.time-button {
+	margin-top: 9vh;
 }
 
 
@@ -329,13 +344,11 @@ body {
 }
 
 .btn-xl {
-	background-color: #999999;
+	background-image: image-url('background.png');
     padding: 14px 35px;
-    font-size: 22px; //change this to your desired size
-    line-height: normal;
-    -webkit-border-radius: 8px;
-       -moz-border-radius: 8px;
-            border-radius: 8px;
+    font-size: 22px; 
+    border-radius: 8px;
+    border: 0px solid transparent;
 }
 
 // Proposal Show //
@@ -417,6 +430,7 @@ body {
 }
 
 .potential_timeslots {
+
 
 }
 
